tests/errors/test_42.xpp
// Unknown type declared

fn foo(mut a: Unknown) void {}

fn bar() Haha {}

fn main() void {
	let x: Preposterous;
}
